<resources>
    <string name="app_name">TestApplication</string>
    <string name="student_name">Student Name*</string>
    <string name="start">Start</string>
    <string name="observation_screen">Observation Screen</string>
    <string name="timerDisplay">00:00:00</string>
    <string name="stopButtonText">Stop</string>
    <string name="observationButtonLabel">Observation Info</string>
    <string name="participating">Participating</string>
    <string name="observing">Observing</string>
    <string name="disengaged">Disengaged</string>
    <string name="verbal">Verbal</string>
    <string name="motor">Motor</string>
    <string name="aggressive">Aggressive</string>
    <string name="out_of_seat">Out Of Seat</string>
    <string name="teacher_information_label">Teacher Information</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="current_class">Current Class</string>
    <string name="observer_information_label">Observer Information</string>
    <string name="title">Title: </string>
    <string name="observation_settings_label">Observation Settings</string>
    <string name="total_observation_time">Total Observation Time: </string>
    <string name="observation_frequency">Observation Frequency</string>
    <string name="frequency">Frequency:</string>
    <string name="observed_student">Observed Student</string>
    <string name="peer_std_label">Peer Student</string>

    <string name="btn_observation">Observation</string>
    <string name="previous_observation_s">Previous Observation(s)</string>
    <string name="icd_code">ICD Code</string>
    <string name="_504_plan">504 plan</string>
    <string name="iep">IEP</string>
    <string name="n_a">N/A</string>
    <string name="ok">OK</string>
    <string name="edit">Edit</string>
    <string name="find">Find</string>
    <string name="lastname_required">Lastname (Required)</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_cancel">Cancel</string>
    <string name="student_apos_s_primary_language">Student\'s Primary Language</string>
    <string name="firstname_required">Firstname (Required)</string>
    <string name="consent_date_required">Consent Date (Required)</string>
    <string name="yyyy_mm_dd_required">YYYY/MM/DD (Required)</string>
    <string name="student_id_required">Student ID (Required)</string>
    <string name="student_information_form">Student Information Form</string>
    <string name="student_summary_information">Student Summary Information</string>
    <string name="summary_screen">Summary Screen</string>
    <string name="student_id">Student Id:</string>
    <string name="lastname">Lastname:</string>
    <string name="firstname">Firstname:</string>
    <string name="teacherSummary">Teacher Summary</string>
    <string name="classname">Class: </string>
    <string name="observerSummary">Observer Summary</string>
    <string name="observationSummary">Observation Summary</string>
    <string name="categories">Categories</string>
    <string name="peer">Peer</string>
    <string name="zero_percent">0%</string>
    <string name="particpating">Particpating</string>
</resources>
