<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@id/observerSummaryLabel"
        android:text="@string/observerSummary"
        android:textSize="25sp"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/observerSummaryDisp"
        android:layout_below="@id/observerSummaryLabel"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/firstname"
            android:textSize="20sp"
            android:gravity="center"
            android:id="@+id/observerFirstName"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lastname"
            android:textSize="20sp"
            android:gravity="center"
            android:id="@+id/observerLastName"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title"
            android:textSize="20sp"
            android:gravity="center"
            android:id="@+id/observerTitle"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@id/teacherSummaryLabel"
        android:text="@string/teacherSummary"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_below="@id/observerSummaryDisp"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/teacherSummaryDisp"
        android:layout_below="@id/teacherSummaryLabel"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/firstname"
            android:textSize="20sp"
            android:gravity="center"
            android:id="@+id/teacherFirstName"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lastname"
            android:textSize="20sp"
            android:gravity="center"
            android:id="@+id/teacherLastName"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/current_class"
            android:textSize="20sp"
            android:gravity="center"
            android:id="@+id/currentClass"/>

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@id/observationSummaryLabel"
        android:text="@string/observationSummary"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_below="@id/teacherSummaryDisp"
        android:layout_marginTop="20dp"/>

    <TableLayout
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/observationTable"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/observationSummaryLabel"
        android:stretchColumns="3">


        <TableRow
            android:id="@+id/tableHeader"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:textSize="20sp"
                android:background="@drawable/cellborder"
                android:text="@string/categories"
                android:padding="3dip"
                android:gravity="center"
                />

            <TextView
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_column="1"
                android:text="@string/observed_student"
                android:padding="3dip"
                android:background="@drawable/cellborder"
                android:gravity="center"
                />

            <TextView
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_column="2"
                android:text="@string/peer"
                android:padding="3dip"
                android:background="@drawable/cellborder"
                android:gravity="center"
                />

        </TableRow>

        <TableRow
            android:id="@+id/observingRow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
            <TextView
                android:id="@+id/stdObsTableLabel"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:textSize="20sp"
                android:background="@drawable/cellborder"
                android:text="@string/observing"
                android:padding="3dip"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/stdObsData"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_column="1"
                android:padding="3dip"
                android:background="@drawable/cellborder"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/prObsData"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_column="2"
                android:padding="3dip"
                android:background="@drawable/cellborder"
                android:gravity="center"
                />

        </TableRow>


        <TableRow
            android:id="@+id/participatingRow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/stdPartTableLabel"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:textSize="20sp"
                android:background="@drawable/cellborder"
                android:text="@string/particpating"
                android:padding="3dip"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/stdPartData"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_column="1"
                android:padding="3dip"
                android:background="@drawable/cellborder"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/prPartData"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_column="2"
                android:padding="3dip"
                android:background="@drawable/cellborder"
                android:gravity="center"
                />

        </TableRow>

        <TableRow
            android:id="@+id/disengagedRow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/stdDisEngTableLabel"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:textSize="20sp"
                android:background="@drawable/cellborder"
                android:text="@string/disengaged"
                android:padding="3dip"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/stdDisEngData"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_column="1"
                android:padding="3dip"
                android:background="@drawable/cellborder"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/prDisEngData"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_column="2"
                android:padding="3dip"
                android:background="@drawable/cellborder"
                android:gravity="center"
                />

        </TableRow>

        <TableRow
            android:id="@+id/verbalRow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/stdVerbalTableLabel"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:textSize="20sp"
                android:background="@drawable/cellborder"
                android:text="@string/verbal"
                android:padding="3dip"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/stdVerbalData"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_column="1"
                android:padding="3dip"
                android:background="@drawable/cellborder"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/prVerbalData"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_column="2"
                android:padding="3dip"
                android:background="@drawable/cellborder"
                android:gravity="center"
                />

        </TableRow>

        <TableRow
            android:id="@+id/motorRow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/stdMotorTableLabel"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:textSize="20sp"
                android:background="@drawable/cellborder"
                android:text="@string/motor"
                android:padding="3dip"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/stdMotorData"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_column="1"
                android:padding="3dip"
                android:background="@drawable/cellborder"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/prMotorData"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_column="2"
                android:padding="3dip"
                android:background="@drawable/cellborder"
                android:gravity="center"
                />

        </TableRow>

        <TableRow
            android:id="@+id/aggressiveRow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/stdAggressiveTableLabel"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:textSize="20sp"
                android:background="@drawable/cellborder"
                android:text="@string/aggressive"
                android:padding="3dip"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/stdAggressiveData"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_column="1"
                android:padding="3dip"
                android:background="@drawable/cellborder"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/prAggressiveData"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_column="2"
                android:padding="3dip"
                android:background="@drawable/cellborder"
                android:gravity="center"
                />

        </TableRow>

        <TableRow
            android:id="@+id/outOfSeat"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/stdOutOfSeatTableLabel"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:textSize="20sp"
                android:background="@drawable/cellborder"
                android:text="@string/out_of_seat"
                android:padding="3dip"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/stdOutOfSeatData"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_column="1"
                android:padding="3dip"
                android:background="@drawable/cellborder"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/prOutOfSeatData"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_column="2"
                android:padding="3dip"
                android:background="@drawable/cellborder"
                android:gravity="center"
                />
        </TableRow>

    </TableLayout>


</RelativeLayout>